# selected-tests

./: .drone.yml  .gitignore  .isort.cfg  .python-version  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  asgi.py  cronjobs.yml  evergreen.yml  junit-bf-matching.xml  mypy.ini  new_error.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_app.py  without_evergreen_credentials_defined_error.json  wsgi.py
.github/: CODEOWNERS
cronjobs/: process_task_mapping_work_items.sh  process_test_mapping_work_items.sh  update_task_mappings.sh  update_test_mappings.sh
cronjobs/lib/: setup_ssh_keys.sh
docs/: Contributing.md  DBSchema.md  ManuallyRunning.md  MongoService.md  adding_private_repos.md
environments/: prod.yml  staging.yml
notebooks/: task_mapping_threshold.ipynb  test_mapping_threshold.ipynb
notebooks/.ipynb_checkpoints/: task_mapping_threshold-checkpoint.ipynb  test_mapping_threshold-checkpoint.ipynb
pip-wheel-metadata/selectedtests.dist-info/: METADATA  top_level.txt
scripts/: create_indexes.sh  server.sh
src/selectedtests/: __init__.py  cli.py  evergreen_helper.py  git_helper.py  helpers.py  injection_helper.py  my_script.py  project_config.py
src/selectedtests.egg-info/: PKG-INFO  SOURCES.txt
src/selectedtests/app/: __init__.py  app.py  asgi.py  dependencies.py  evergreen.py  helpers.py  main.py  models.py  parsers.py  project_test_mapping_work_item.py  swagger_api.py  test_mapping_work_item.py  wsgi.py
src/selectedtests/config/: logging_config.py
src/selectedtests/datasource/: cli.py  datasource_cli.py  mongo_wrapper.py
src/selectedtests/task_mappings/: cli.py  create_task_mappings.py  get_task_mappings.py  mappings.py  task_mappings.py  task_mappings_cli.py  update_task_mappings.py  version_limit.py
src/selectedtests/taskmappings/: mappings.py
src/selectedtests/test_mappings/: cli.py  commit_limit.py  create_mappings.py  create_test_mappings.py  get_mappings.py  get_test_mappings.py  mappings.py  test_mappings_cli.py  update_test_mappings.py
src/selectedtests/work_items/: cli.py  process_task_mapping_work_items.py  process_test_mapping_work_items.py  process_work_items.py  project_task_mapping_work_item.py  task_mapping_work_item.py  test_mapping_work_item.py  work_items_cli.py
tests/: conftest.py  test_app.py  test_evergreen_helper.py
tests/selectedtests/: conftest.py  test.py  test_app.py  test_create_query.py  test_evergreen_helper.py  test_git_helper.py  test_project_config.py
tests/selectedtests/app/: conftest.py  test_app.py  test_project_test_mapping_work_item.py  test_test_mapping_work_item.py
tests/selectedtests/datasource/: test_mongo_wrapper.py
tests/selectedtests/sample_data/: expected_task_mappings.json  expected_test_mappings.json
tests/selectedtests/task_mappings/: conftest.py  test_cli.py  test_create_task_mappings.py  test_get_task_mappings.py  test_mappings.py  test_task_mappings.py  test_task_mappings_cli.py  test_update_task_mappings.py  test_version_limit.py
tests/task_mappings/: test_task_mappings.py
tests/work_items/: test_work_items_cli.py
(+42 files in other folders)
