[tool.poetry]
name = "selectedtests"
version = "0.1.0"
description = "Calculate correlated tests and tasks for source files in a given evergreen project"
authors = [
    "Alexander Costas <alexander.costas@mongodb.com>",
    "David Bradford <david.bradford@mongodb.com>",
    "Jeff Zambory <jeff.zambory@mongodb.com>",
    "Jim O'Leary <jim.oleary@mongodb.com>",
    "Lydia Stepanek <lydia.stepanek@mongodb.com>",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/mongodb/selected-tests"

[tool.poetry.scripts]
selected-tests-service = "selectedtests.app.app:main"
task-mappings = "selectedtests.task_mappings.task_mappings_cli:main"
test-mappings = "selectedtests.test_mappings.test_mappings_cli:main"
init-mongo = "selectedtests.datasource.datasource_cli:main"
work-items = "selectedtests.work_items.work_items_cli:main"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
Click = "7.0"
GitPython = "3.0.8"
boltons = "19.1.0"
dnspython = "1.16.0"
fastapi = "0.45"
misc-utils-py = "0.1.2"
pytz = "2019.3"
structlog = "19.1.0"
pymongo = {version = "3.8.0", extras = ["tls"]}
uvicorn = "^0.11.3"
requests = "^2.24.0"
"evergreen.py" = "^1.4.8"

[tool.poetry.dev-dependencies]
gunicorn = "^19.9.0"
pytest-flake8 = "^1.0.4"
pytest-isort = "^0.3.1"
pytest = "^5.2.0"
pytest-mypy = "^0.4.2"
scipy = "^1.7.1"
jupyter = "^1.0.0"
matplotlib = "^3.1.3"
pytest-cov = "^2.8.1"
pytest-pydocstyle = "^2.1.3"
pytest-black = "^0.3.8"

[tool.black]
line-length = 100
target-version = ["py37"]
